--- a/MyShop/Areas/Admin/Views/Product/AddEdit.cshtml
+++ b/MyShop/Areas/Admin/Views/Product/AddEdit.cshtml
@@ -99,7 +99,7 @@
 	</form>
 </section>
 
-<form asp-area="Admin" asp-controller="Product" asp-action="AddEdit" enctype="multipart/form-data" method="post">
+@* <form asp-area="Admin" asp-controller="Product" asp-action="AddEdit" enctype="multipart/form-data" method="post">
 	<div>
 		<input asp-for="Id" type="hidden" />
 	</div>
@@ -180,3 +180,4 @@
 	</div>
 </form>
 
+ *@
