--- a/MyShop/Views/Home/Index.cshtml
+++ b/MyShop/Views/Home/Index.cshtml
@@ -43,7 +43,7 @@
 							</div>
 						}
 						<div class="item__image">
-							<img src="~/assets//img/product/@item.ImageFile" alt="" />
+							<img src="~/assets/img/product/@item.ImageFile" alt="" />
 						</div>
 						<div class="item__name">
 							@item.Title (@item.Memory GB) @item.ProdColor
