--- a/MyShop/Areas/Admin/Views/Order/Index.cshtml
+++ b/MyShop/Areas/Admin/Views/Order/Index.cshtml
@@ -1,45 +1,69 @@
 ﻿@model List<OrderVM>
 @{
-    ViewData["Title"] = "Index";
-    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+	ViewData["Title"] = "Index";
+	Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<main>
-    <div class="container">
-        <div class="add__product">
-            <a asp-area="Admin" asp-controller="Order" asp-action="Index" asp-route-IsDeleted="@true" class="add__btn btn">Удаленные</a>
-            <a asp-area="Admin" asp-controller="Order" asp-action="Index" asp-route-IsDeleted="@false" class="add__btn btn">Активные</a>
-        </div>
-    </div>
-    <section class="product">
-        <div class="container">
-            <div class="product__table">
-                <table class="table">
-                    <tr>
-                        <th> Номер заказа </th>
-                        <th>Дата заказа</th>
-                        <th>Имя заказчика</th>
-                        <th>Тел. заказчика</th>
-                        <th>Подробное</th>
-                        @*<th>Архивировать</th>*@
-                    </tr>
 
-                    @foreach (var item in Model)
-                    {
+<section class="dashboard">
+	<h2>Order</h2>
+	<div class="dashboard__table">
+		@foreach (var item in Model)
+		{
+			<div class="dashboard__item">
+				<div class="item__left">
+					<div class="item__title item">№ @item.Id</div>
+					<div class="item__title item">@item.OrderDate</div>
+					<div class="item__title item">@item.Customer.Name</div>
+					<div class="item__title item">@item.Customer.PhoneNumber</div>
+				</div>
+				<div class="item__right">
+					<a asp-area="Admin" asp-controller="Order" asp-action="Details" asp-route-Id="@item.Id" class="see-more">
+						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="blue" width="25" height="25">
+							<path stroke-linecap="round" stroke-linejoin="round" d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z" />
+							<path stroke-linecap="round" stroke-linejoin="round" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z" />
+						</svg>
+					</a>
+				</div>
+			</div>
+		}
+	</div>
+</section>
 
-                        <tr style="background-color:@(item.IsDeleted?"red":"white")">
-                            <td>@item.Id</td>
-                            <td>@item.OrderDate</td>
-                            <td>@item.Customer.Name</td>
-                            <td>@item.Customer.PhoneNumber</td>
-                            <td class="table__btn "><a asp-area="Admin" asp-controller="Order" asp-action="Details" asp-route-Id="@item.Id">Подробное</a></td>
-                        </tr>
-                    }
+<div class="container">
+	<div class="add__product">
+		<a asp-area="Admin" asp-controller="Order" asp-action="Index" asp-route-IsDeleted="@true" class="add__btn btn">Удаленные</a>
+		<a asp-area="Admin" asp-controller="Order" asp-action="Index" asp-route-IsDeleted="@false" class="add__btn btn">Активные</a>
+	</div>
+</div>
+<section class="product">
+	<div class="container">
+		<div class="product__table">
+			<table class="table">
+				<tr>
+					<th> Номер заказа </th>
+					<th>Дата заказа</th>
+					<th>Имя заказчика</th>
+					<th>Тел. заказчика</th>
+					<th>Подробное</th>
+					@*<th>Архивировать</th>*@
+				</tr>
+
+				@foreach (var item in Model)
+				{
+
+					<tr style="background-color:@(item.IsDeleted?"red":"white")">
+						<td>@item.Id</td>
+						<td>@item.OrderDate</td>
+						<td>@item.Customer.Name</td>
+						<td>@item.Customer.PhoneNumber</td>
+						<td class="table__btn"><a asp-area="Admin" asp-controller="Order" asp-action="Details" asp-route-Id="@item.Id">Подробное</a></td>
+					</tr>
+				}
 
 
-                </table>
+			</table>
 
-            </div>
-        </div>
-    </section>
-</main>
+		</div>
+	</div>
+</section>
