--- a/MyShop/Areas/Admin/Views/Product/AddEditAttribute.cshtml
+++ b/MyShop/Areas/Admin/Views/Product/AddEditAttribute.cshtml
@@ -1,30 +1,31 @@
 ﻿@model List<PAVM>
 @{
-    ViewData["Title"] = "AddEditAttribute";
+	ViewData["Title"] = "AddEditAttribute";
 }
 
-<h1>AddEditAttribute</h1>
+<section class="dashboard">
+	<h2 class="title">Add or Edit Attributes</h2>
+	<form asp-area="Admin" asp-controller="Product" asp-action="AddEditAttribute" asp-route-prodId="@ViewBag.ProdId" asp-route-edit="@ViewBag.Edit">
+		@foreach (var item in Model)
+		{
+			<select multiple name="list" class="multiple-select">
+				<optgroup label="@item.Name">
+					@foreach (var item1 in item.Values)
+					{
+						if (ViewBag.Selected.Contains(item1.Id))
+						{
+							<option selected value="@item1.Id">@item1.Value</option>
+						}
+						else
+						{
+							<option value="@item1.Id">@item1.Value</option>
+						}
 
-<form asp-area="Admin" asp-controller="Product" asp-action="AddEditAttribute" asp-route-prodId="@ViewBag.ProdId" asp-route-edit="@ViewBag.Edit">
-    @foreach (var item in Model)
-    {
-        <select multiple name="list">
-            <optgroup label="@item.Name">
-                @foreach (var item1 in item.Values)
-                {
-                    if (ViewBag.Selected.Contains(item1.Id))
-                    {
-                        <option selected value="@item1.Id">@item1.Value</option>
-                    }
-                    else
-                    {
-                        <option value="@item1.Id">@item1.Value</option>
-                    }
-                    
-                }
-            </optgroup>
+					}
+				</optgroup>
 
-        </select>
-    }
-    <input type="submit" />
-</form>
+			</select>
+		}
+		<button type="submit" style="display: block; margin-top: 20px;" class="btn">Save</button>
+	</form>
+</section>
