--- a/MyShop/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MyShop/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -6,10 +6,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - MyShop</title>
-    <link rel="stylesheet" href="~/assets/css/admin.css"/>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>@ViewData["Title"] - MyShop</title>
+	<link rel="stylesheet" href="~/assets/css/admin.css" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 	@RenderSection("head", required: false)
@@ -38,7 +38,24 @@
 		</div>
 
 		} *@
+		<div class="userInfo">
 
+
+			@if (User.Identity.IsAuthenticated)
+			{
+				<p style="padding:10px;">@User.Identity.Name</p>
+
+				<form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
+					<button class="btn" type="submit">Logout</button>
+				</form>
+			}
+			else
+			{
+				<a class="btn" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+
+				<a class="btn" asp-area="" asp-controller="Account" asp-action="Register">Register</a>
+			}
+		</div>
 
 
 		<aside>
@@ -95,7 +112,7 @@
 					<li>
 						<a asp-area="Admin" asp-controller="PA" asp-action="Index">
 							<div class="icon @(currentUrl.Contains("PA") ? "active" : "")">
-								<svg width="22px" height="22px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <path d="M3 5.5C3 14.0604 9.93959 21 18.5 21C18.8862 21 19.2691 20.9859 19.6483 20.9581C20.0834 20.9262 20.3009 20.9103 20.499 20.7963C20.663 20.7019 20.8185 20.5345 20.9007 20.364C21 20.1582 21 19.9181 21 19.438V16.6207C21 16.2169 21 16.015 20.9335 15.842C20.8749 15.6891 20.7795 15.553 20.6559 15.4456C20.516 15.324 20.3262 15.255 19.9468 15.117L16.74 13.9509C16.2985 13.7904 16.0777 13.7101 15.8683 13.7237C15.6836 13.7357 15.5059 13.7988 15.3549 13.9058C15.1837 14.0271 15.0629 14.2285 14.8212 14.6314L14 16C11.3501 14.7999 9.2019 12.6489 8 10L9.36863 9.17882C9.77145 8.93713 9.97286 8.81628 10.0942 8.64506C10.2012 8.49408 10.2643 8.31637 10.2763 8.1317C10.2899 7.92227 10.2096 7.70153 10.0491 7.26005L8.88299 4.05321C8.745 3.67376 8.67601 3.48403 8.55442 3.3441C8.44701 3.22049 8.31089 3.12515 8.15802 3.06645C7.98496 3 7.78308 3 7.37932 3H4.56201C4.08188 3 3.84181 3 3.63598 3.09925C3.4655 3.18146 3.29814 3.33701 3.2037 3.50103C3.08968 3.69907 3.07375 3.91662 3.04189 4.35173C3.01413 4.73086 3 5.11378 3 5.5Z" stroke="#000000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </g></svg>
+								<svg width="64px" height="64px" viewBox="0 0 512 512" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <title>product</title> <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"> <g id="icon" fill="#000000" transform="translate(64.000000, 34.346667)"> <path d="M192,7.10542736e-15 L384,110.851252 L384,332.553755 L192,443.405007 L1.42108547e-14,332.553755 L1.42108547e-14,110.851252 L192,7.10542736e-15 Z M127.999,206.918 L128,357.189 L170.666667,381.824 L170.666667,231.552 L127.999,206.918 Z M42.6666667,157.653333 L42.6666667,307.920144 L85.333,332.555 L85.333,182.286 L42.6666667,157.653333 Z M275.991,97.759 L150.413,170.595 L192,194.605531 L317.866667,121.936377 L275.991,97.759 Z M192,49.267223 L66.1333333,121.936377 L107.795,145.989 L233.374,73.154 L192,49.267223 Z" id="Combined-Shape"> </path> </g> </g> </g></svg>
 							</div>
 							<span>Attributes</span>
 						</a>
@@ -108,22 +125,7 @@
 							<span>Callback</span>
 						</a>
 					</li>
-					@if (User.Identity.IsAuthenticated)
-					{
-						<li><p style="padding:10px;">@User.Identity.Name</p></li>
 
-						<li>
-							<form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
-								<input type="submit" value="Выход" />
-							</form>
-						</li>
-					}
-					else
-					{
-						<li><a asp-area="" asp-controller="Account" asp-action="Login">Вход</a></li>
-
-						<li><a asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a></li>
-					}
 				</ul>
 			</nav>
 			<div class="aside__bottom">
@@ -167,53 +169,53 @@
 
 
 
-   @*  <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyShop</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse d-sm-inline-flex justify-content-between collapse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="Order" asp-action="Index">Order</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="Admin" asp-controller="PA" asp-action="Index">Attributes</a>
-                        </li>
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            <li><p style="padding:10px;">@User.Identity.Name</p></li>
+	@*  <header>
+	<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+	<div class="container-fluid">
+	<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">MyShop</a>
+	<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+	aria-expanded="false" aria-label="Toggle navigation">
+	<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="navbar-collapse d-sm-inline-flex justify-content-between collapse">
+	<ul class="navbar-nav flex-grow-1">
+	<li class="nav-item">
+	<a class="nav-link text-dark" asp-area="Admin" asp-controller="Home" asp-action="Index">Home</a>
+	</li>
+	<li class="nav-item">
+	<a class="nav-link text-dark" asp-area="Admin" asp-controller="Category" asp-action="Index">Category</a>
+	</li>
+	<li class="nav-item">
+	<a class="nav-link text-dark" asp-area="Admin" asp-controller="Product" asp-action="Index">Product</a>
+	</li>
+	<li class="nav-item">
+	<a class="nav-link text-dark" asp-area="Admin" asp-controller="Order" asp-action="Index">Order</a>
+	</li>
+	<li class="nav-item">
+	<a class="nav-link text-dark" asp-area="Admin" asp-controller="PA" asp-action="Index">Attributes</a>
+	</li>
+	@if (User.Identity.IsAuthenticated)
+	{
+	<li><p style="padding:10px;">@User.Identity.Name</p></li>
 
-                            <li>
-                                <form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
-                                <input type="submit" value="Выход" />
-                                </form>
-                            </li>
-                        }
-                        else
-                        {
-                            <li><a asp-area="" asp-controller="Account" asp-action="Login">Вход</a></li>
-                            
-                            <li><a asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a></li>
-                        }
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header> *@
-  
+	<li>
+	<form asp-area="" asp-controller="Account" asp-action="Logout" method="post">
+	<input type="submit" value="Выход" />
+	</form>
+	</li>
+	}
+	else
+	{
+	<li><a asp-area="" asp-controller="Account" asp-action="Login">Вход</a></li>
+
+	<li><a asp-area="" asp-controller="Account" asp-action="Register">Регистрация</a></li>
+	}
+	</ul>
+	</div>
+	</div>
+	</nav>
+	</header> *@
+
 	<script src="~/assets/js/admin.js"></script>
 	@RenderSection("script", required: false)
 </body>
