--- a/MyShop/Views/Home/Search.cshtml
+++ b/MyShop/Views/Home/Search.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<ShortProductVM>
+﻿@model List<ProductForSearch>
 @{
     Layout = null;
 }
@@ -13,6 +13,7 @@
                 <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Slug" class="search-link">
                     @item.Title @($"{item.Memory}GB") (@item.ProdColor)
                 </a>
+            <img src="~/assets/img/product/@item.ImageFile" width="10px" />
             </p>
 
         }
