--- a/MyShop/Views/Product/Details.cshtml
+++ b/MyShop/Views/Product/Details.cshtml
@@ -18,12 +18,12 @@
 						<img src="~/assets/img/product/@Model.MainImage" />
 					</div>
 					<div class="product__img swiper-slide">
-						<img src="~/assets/img/product/@Model.MainImage" />
+						@foreach(var item in Model.Images)
+						{
+						<img src="~/assets/img/product/@item.ImageFile" />
+						}
 					</div>
-					<div class="product__img swiper-slide">
-						<img src="~/assets/img/product/@Model.MainImage" />
-					</div>
-				</div>
+				</>
 				<div class="swiper-pagination"></div>
 			</div>
 
