--- a/MyShop/Views/Order/Create.cshtml
+++ b/MyShop/Views/Order/Create.cshtml
@@ -8,6 +8,50 @@
 	<link rel="stylesheet" href="~/assets/css/cart.css" />
 }
 
+
+<div class="send-message__container" style="display: none" id="send-message">
+
+
+	<div class="wrapperAlert">
+
+		<div class="contentAlert">
+
+			<div class="topHalf">
+
+				<p>
+					<svg viewBox="0 0 512 512" width="100" title="check-circle">
+						<path d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z" />
+					</svg>
+				</p>
+				<strong>Ուռաաա</strong>
+
+				<ul class="bg-bubbles">
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
+
+			<div class="bottomHalf">
+				<p>Ձեր պատվերը հաջողությամբ հաստատվել է:</p>
+				<a href="/" class="btn">Փակել</a>
+
+			</div>
+
+		</div>
+
+	</div>
+
+
+</div>
+
 <section class="cart">
 	<div class="container">
 		@if (ViewBag.Carts.Count > 0)
@@ -28,7 +72,7 @@
 								<div class="item__title">
 									<a asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Product.Slug">
 										@item.Product.Title
-									
+
 									</a>
 									<div class="item__info">
 										@item.Product.Memory GB
@@ -46,30 +90,30 @@
 									<button type="button" class="inc button count-inc">+</button>
 								</div>
 
-						
+
 								@* <a asp-area="" asp-controller="Cart" asp-action="Delete" asp-route-Id="@item.Id" class="item__remove">Հեռացնել</a> *@
 							</div>
-								<button type="button" class="item__remove">Հեռացնել</button>
+							<button type="button" class="item__remove">Հեռացնել</button>
 						</form>
 					}
 				</div>
 
 				<form asp-area="" asp-controller="Order" asp-action="Create" class="cart-order__form">
-					@* axper stex inch dasht petqa input hidden-nerov dir tenam eli baci et anun heraxos hamar captcha *@
+					<input type="hidden" name="CookieId" value="" />
 					<div class="floating-label-input">
-						<input asp-for="Customer.Name" type="text"
+						<input name="Name" type="text"
 							   class="form__input"
 							   required />
 						<label class="label">Անուն</label>
 					</div>
 					<div class="floating-label-input">
-						<input asp-for="Customer.PhoneNumber" type="text"
+						<input name="PhoneNumber" type="text"
 							   class="form__input"
 							   required />
 						<label class="label">Հեռախոսահամար</label>
 					</div>
 					<div class="floating-label-input">
-						<input asp-for="Customer.Email" type="email"
+						<input name="Email" type="email"
 							   class="form__input"
 							   required />
 						<label class="label">Էլ. հասցե</label>
