made the design of the category page

--- a/MyShop/Views/Order/Create.cshtml
+++ b/MyShop/Views/Order/Create.cshtml
@@ -118,7 +118,7 @@
 							   required />
 						<label class="label">Էլ. հասցե</label>
 					</div>
-					<button type="submit" class="btn-orange">Պատվիրել</button>
+					<button type="submit" class="btn-green">Պատվիրել</button>
 				</form>
 			</div>
 
@@ -131,7 +131,7 @@
 					Ավելացրեք ցանկալի ապրանքները զամբյուղում: Կապվեք մեզ հետ, եթե ունեք
 					հարցեր:<br /> <b>Շնորհակալություն մեր խանութն ընտրելու համար:</b>
 				</p>
-				<a asp-area="" asp-controller="Category" asp-action="Index" class="btn-orange">Կատալոգ</a>
+				<a asp-area="" asp-controller="Category" asp-action="Index" class="btn-green">Կատալոգ</a>
 			</div>
 		}
 	</div>
