--- a/MyShop/Views/Shared/Components/CallBackViewComponent/Default.cshtml
+++ b/MyShop/Views/Shared/Components/CallBackViewComponent/Default.cshtml
@@ -79,7 +79,7 @@
 					<span class="captcha-error" id="captchaerror"></span>
 
 				</label>
-				<button type="submit" class="btn-orange">Ուղարկել</button>
+				<button type="submit" class="btn-green">Ուղարկել</button>
 			</form>
 		</div>
 	</div>
