--- a/MyShop/Views/Category/Details.cshtml
+++ b/MyShop/Views/Category/Details.cshtml
@@ -1,48 +1,73 @@
 ﻿@model CategoryVM
 @{
-    ViewData["Title"] = "Details";
+	ViewData["Title"] = "Details";
 }
 
-<h1 style="text-align:center">@Model.Name</h1>
-
-<h6>@Model.Description</h6>
-<br />
-<br />
-<br />
-
-<partial name="_Filter" model="(FilterVM)ViewBag.Filter" />
-
-@if (Model.Products.Count>0)
-{
-<div class="d-flex flex-wrap">
-@foreach(var item in Model.Products){
-        <div class="prods d-flex flex-column">
-            <h5> @item.Title @item.Memory GB (@item.ProdColor)</h5>
-            <br>
-            <div class="prod_icon">
-                <img src="~/assets/img/product/@item.ImageFile">
-            </div>
-            @if (item.Discount > 0)
-            {   
-                <span>@item.FinalPrice.ToString("N0") AMD.</span>
-                <span class="prodprice">@item.Price.ToString("N0") AMD</span>
-                <br />
-            }
-            else
-            {
-                <p>@item.Price.ToString("N0") AMD</p>
-            }
-            <form asp-area="" asp-controller="Cart" asp-action="AddToBasket" asp-route-productId="@item.Id" asp-route-FinalPrice="@item.FinalPrice" >
-            Count : <input type="number" min="0" max="200" value="1" name="count">
-                <input type="submit" value="Add To Cart" onclick="alert('Added')">
-            </form>
-            <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Slug" >See more</a>
-       </div>
+@section head {
+	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+	<link rel="stylesheet" href="~/assets/css/category.css" />
 }
-    </div>
 
-}
-else
-{
-    <h6 class="text-center">No matched products</h6>
+<section class="category">
+	<div class="container">
+		<div class="category__title title">@Model.Name</div>
+		<div class="category__wrapper">
+			<div class="category__filter">
+				<partial name="_Filter" model="(FilterVM)ViewBag.Filter" />
+			</div>
+
+			@if (Model.Products.Count > 0)
+			{
+				<div class="category__items">
+					@foreach (var item in Model.Products)
+					{
+						<form asp-area="" asp-controller="Cart" asp-action="AddToBasket" asp-route-productId="@item.Id" asp-route-FinalPrice="@item.FinalPrice" class="category__item addToCartForm">
+							@if (item.Discount > 0)
+							{
+								<div class="item__discount">
+									<div class="discount__image">
+										<img src="~/assets/img/productStatic/badge-154930_1280.png" alt="discount" />
+										<span>@item.Discount%</span>
+									</div>
+								</div>
+							}
+							<div class="item__image">
+								<img src="~/assets/img/product/@item.ImageFile" alt="@item.Title" />
+							</div>
+							<div class="item__name">
+								@item.Title (@item.Memory GB) @item.ProdColor
+							</div>
+							<div class="item__price">
+								@if (item.Discount > 0)
+								{
+									<del class="del">@item.Price.ToString("N0") AMD</del>
+									<span class="discount">@item.FinalPrice.ToString("N0") AMD</span>
+								}
+								else
+								{
+									<span>@item.Price AMD</span>
+								}
+
+							</div>
+							<input type="hidden" value="1" name="count" />
+							<div class="item__buttons">
+								<a class="btn-green" asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Slug">Ավելին</a>
+								<button type="submit" class="btn-green addToCart add-toast">Գնել</button>
+							</div>
+						</form>
+					}
+				</div>
+			}
+			else
+			{
+				<div class="not-found">Ոչինչ չի գտնվել:</div>
+			}
+		</div>
+	</div>
+</section>
+
+
+@section scripts {
+	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+	<script src="~/assets/js/addToBasket.js"></script>
 }
