--- a/MyShop/Views/Home/Index.cshtml
+++ b/MyShop/Views/Home/Index.cshtml
@@ -70,8 +70,8 @@
 						</div>
 						<input type="hidden" value="1" name="count" />
 						<div class="item__buttons">
-							<a class="btn-orange" asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Slug">Ավելին</a>
-							<button type="submit" class="btn-orange addToCart add-toast">Գնել</button>
+							<a class="btn-green" asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Slug">Ավելին</a>
+							<button type="submit" class="btn-green addToCart add-toast">Գնել</button>
 						</div>
 					</form>
 				}
