--- a/MyShop/Views/Shared/_Filter.cshtml
+++ b/MyShop/Views/Shared/_Filter.cshtml
@@ -1,39 +1,55 @@
 ﻿@using Domain;
 @model FilterVM
-<form asp-area="" asp-controller="Category" asp-action="Details" asp-route-Id="@ViewBag.CategoryId">
-    <small>MinPrice:</small>
-    <input type="number" min="@ViewBag.ProdMinPrice" step="1" name="MinPrice" value="@Model.MinPrice" />
-    <br />
-    <small>MaxPrice:</small>
-    <input type="number" max="@ViewBag.ProdMaxPrice" name="MaxPrice" value="@Model.MaxPrice" />
 
-    @foreach (var item in ViewBag.Pavs as List<IGrouping<string, Atribute_ValueVM>>)
-    {
-        <p>@item.Key</p>
-        @foreach (var item1 in item)
-        {
-            <input type="checkbox" name="@item.Key" id="@item1.Value" value="@item1.Value" multiple checked="@(ViewBag.Filter.GetType().GetProperty(item.Key)?.GetValue(ViewBag.Filter)?.Contains(item1.Value))">
-            <label for="@item1.Value">@item1.Value</label>
-        }
-    }
-    @if (ViewBag.Memories != null)
-    {
-    <br />
-    Мемоrу:
-        <br />
-        @foreach (var item in ViewBag.Memories as List<string>)
-        {
-            <input type="checkbox" name="Memory" id="@item" value="@item" multiple checked="@(ViewBag.Filter.GetType().GetProperty("Memory")?.GetValue(ViewBag.Filter)?.Contains(item))">
-            <label for="@item">@item</label>
-        }
-        <br />
-    }
-    Color:
-    <br />
-    @foreach (var item in Enum.GetValues(typeof(ProdColor)))
-    {
-        <input type="checkbox" name="Color" id="@item" value="@item" multiple checked="@(ViewBag.Filter.GetType().GetProperty("Color")?.GetValue(ViewBag.Filter)?.Contains($"{item}"))">
-        <label for="@item">@item</label>
-    }
-    <input type="submit" />
+
+<form asp-area="" asp-controller="Category" asp-action="Details" asp-route-Id="@ViewBag.CategoryId">
+	<div class="filter__memory filter__item"՚ style="margin-top: 0; margin-bottom: 20px;">
+		<span>Գին</span>
+	</div>
+	<div class="floating-label-input">
+		<input type="number" min="@ViewBag.ProdMinPrice" step="1" name="MinPrice" value="@Model.MinPrice" id="minPrice" />
+		<label for="minPrice" class="label">Սկսած</label>
+	</div>
+	<div class="floating-label-input">
+		<input type="number" max="@ViewBag.ProdMaxPrice" name="MaxPrice" value="@Model.MaxPrice" id="maxPrice" />
+		<label for="maxPrice" class="label">Մինչև</label>
+	</div>
+
+	@foreach (var item in ViewBag.Pavs as List<IGrouping<string, Atribute_ValueVM>>)
+	{
+		<p>@item.Key</p>
+		@foreach (var item1 in item)
+		{
+			<input type="checkbox" name="@item.Key" id="@item1.Value" value="@item1.Value" multiple checked="@(ViewBag.Filter.GetType().GetProperty(item.Key)?.GetValue(ViewBag.Filter)?.Contains(item1.Value))">
+			<label for="@item1.Value">@item1.Value</label>
+		}
+	}
+	@if (ViewBag.Memories != null)
+	{
+		<div class="filter__memory filter__item">
+			<span>Հիշողություն</span>
+			@foreach (var item in ViewBag.Memories as List<string>)
+			{
+				<div class="">
+					<input type="checkbox" name="Memory" id="@item" value="@item" multiple checked="@(ViewBag.Filter.GetType().GetProperty("Memory")?.GetValue(ViewBag.Filter)?.Contains(item))">
+					<label for="@item">@item</label>
+				</div>
+			}
+
+		</div>
+	}
+	<div class="filter__memory filter__item">
+		<span>Գույն</span>
+		@foreach (var item in Enum.GetValues(typeof(ProdColor)))
+		{
+			<div class="">
+				<input type="checkbox" name="Color" id="@item" value="@item" multiple checked="@(ViewBag.Filter.GetType().GetProperty("Color")?.GetValue(ViewBag.Filter)?.Contains($"{item}"))">
+				<label for="@item">@item</label>
+			</div>
+		
+		}
+	
+	</div>
+	<button type="submit" class="btn-green">Հաստատել</button>
+	<a class="btn-green" asp-area="" asp-controller="Category" asp-action="Details" asp-route-Id="@ViewBag.CategoryId">Չեղարկել</a>
 </form>
