--- a/MyShop/Views/Home/Search.cshtml
+++ b/MyShop/Views/Home/Search.cshtml
@@ -1,26 +1,30 @@
 ﻿@model List<ProductForSearch>
 @{
-    Layout = null;
+	Layout = null;
 }
 
 @if (Model.Count > 0)
 {
-    <div class="search-res">
-        @foreach (var item in Model)
-        {
-            <p class="search-res-prods">
-                @*<a asp-area="" asp-controller="Product" asp-action="Details" asp-route-Id="@item.Id" class="search-link">*@
-                <a asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Slug" class="search-link">
-                    @item.Title @($"{item.Memory}GB") (@item.ProdColor)
-                </a>
-            <img src="~/assets/img/product/@item.ImageFile" width="10px" />
-            </p>
+	<div class="search-res">
+		@foreach (var item in Model)
+		{
+			<a asp-area="" asp-controller="Product" asp-action="Details" asp-route-slug="@item.Slug" class="search__item">
+				<div class="search__img">
+					<img src="~/assets/img/product/@item.ImageFile" width="10px" />
+				</div>
+				<div class="search-res-prods">
+					<div  class="search-link">
+						@item.Title @($"{item.Memory}GB") (@item.ProdColor)
+					</div>
+				</div>
+			</a>
 
-        }
-    </div>
+
+		}
+	</div>
 
 }
 else
 {
-    <p class="search-res-no">Ոչինչ չի գտնվել</p>
+	<p class="search-res-no">Ոչինչ չի գտնվել</p>
 }
