--- a/MyShop/wwwroot/assets/css/product.css
+++ b/MyShop/wwwroot/assets/css/product.css
@@ -113,15 +113,20 @@
 @media (max-width: 992px) {
     .product__wrapper {
         padding: 25px;
-        gap: 20px;
+        gap:50px;
     }
-
     .swiper {
-        max-width: 300px;
+      width: 450px;
     }
 
     .swiper-slide {
         height: 300px !important;
+    }
+    .product__price .del {
+        font-size: 18px;
+    }
+    .product__price.disc {
+        font-size: 24px;
     }
 }
 
@@ -132,6 +137,7 @@
     .product__wrapper {
         flex-direction: column;
         padding: 0px;
+        gap: 20px;
     }
 
     .product__title {
@@ -155,6 +161,7 @@
 
     .swiper {
         max-width: 100%;
+        width: 100%;
     }
 
     .swiper-slide {
@@ -189,4 +196,5 @@
     .addToCart {
         width: 100%;
     }
+
 }
