--- a/MyShop/wwwroot/assets/css/style.css
+++ b/MyShop/wwwroot/assets/css/style.css
@@ -18,7 +18,237 @@
         box-sizing: border-box;
     }
 
+.send-message__container {
+    inset: 0;
+    background: rgba(255,255,255,.8);
+    position: fixed;
+    z-index: 1000;
+}
 
+.wrapperAlert {
+    width: 500px;
+    height: 400px;
+    overflow: hidden;
+    border-radius: 12px;
+    border: thin solid #ddd;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 100;
+}
+
+.topHalf {
+    width: 100%;
+    color: white;
+    overflow: hidden;
+    min-height: 250px;
+    position: relative;
+    padding: 40px 0;
+    background: rgb(0,0,0);
+    background: -webkit-linear-gradient(45deg, #019871, #a0ebcf);
+}
+
+    .topHalf p {
+        margin-bottom: 30px;
+    }
+
+.send-message__container svg {
+    fill: white;
+}
+
+.topHalf strong {
+    font-size: 2.25rem;
+    display: block;
+    font-weight: 500;
+    letter-spacing: 0.15rem;
+    text-shadow: 0 2px rgba(128, 128, 128, 0.6);
+}
+
+/* Original Author of Bubbles Animation -- https://codepen.io/Lewitje/pen/BNNJjo */
+.bg-bubbles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+    .bg-bubbles li {
+        position: absolute;
+        list-style: none;
+        display: block;
+        width: 40px;
+        height: 40px;
+        background-color: rgba(255, 255, 255, 0.15); /* fade(green, 75%);*/
+        bottom: -160px;
+        -webkit-animation: square 20s infinite;
+        animation: square 20s infinite;
+        -webkit-transition-timing-function: linear;
+        transition-timing-function: linear;
+    }
+
+        .bg-bubbles li:nth-child(1) {
+            left: 10%;
+        }
+
+        .bg-bubbles li:nth-child(2) {
+            left: 20%;
+            width: 80px;
+            height: 80px;
+            animation-delay: 2s;
+            animation-duration: 17s;
+        }
+
+        .bg-bubbles li:nth-child(3) {
+            left: 25%;
+            animation-delay: 4s;
+        }
+
+        .bg-bubbles li:nth-child(4) {
+            left: 40%;
+            width: 60px;
+            height: 60px;
+            animation-duration: 22s;
+            background-color: rgba(white, 0.3); /* fade(white, 25%); */
+        }
+
+        .bg-bubbles li:nth-child(5) {
+            left: 70%;
+        }
+
+        .bg-bubbles li:nth-child(6) {
+            left: 80%;
+            width: 120px;
+            height: 120px;
+            animation-delay: 3s;
+            background-color: rgba(white, 0.2); /* fade(white, 20%); */
+        }
+
+        .bg-bubbles li:nth-child(7) {
+            left: 32%;
+            width: 160px;
+            height: 160px;
+            animation-delay: 7s;
+        }
+
+        .bg-bubbles li:nth-child(8) {
+            left: 55%;
+            width: 20px;
+            height: 20px;
+            animation-delay: 15s;
+            animation-duration: 40s;
+        }
+
+        .bg-bubbles li:nth-child(9) {
+            left: 25%;
+            width: 10px;
+            height: 10px;
+            animation-delay: 2s;
+            animation-duration: 40s;
+            background-color: rgba(white, 0.3); /*fade(white, 30%);*/
+        }
+
+        .bg-bubbles li:nth-child(10) {
+            left: 90%;
+            width: 160px;
+            height: 160px;
+            animation-delay: 11s;
+        }
+
+@-webkit-keyframes square {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-500px) rotate(600deg);
+    }
+}
+
+@keyframes square {
+    0% {
+        transform: translateY(0);
+    }
+
+    100% {
+        transform: translateY(-500px) rotate(600deg);
+    }
+}
+
+.bottomHalf {
+    align-items: center;
+    padding: 35px;
+    background: #fff;
+}
+
+    .bottomHalf p {
+        font-weight: 500;
+        font-size: 20px;
+        margin-bottom: 20px;
+    }
+
+    .bottomHalf a {
+        display: inline-block;
+        background: var(--green);
+        padding: 15px 30px;
+        color: #fff;
+        border-radius: 10px;
+    }
+
+
+.close-send-modal {
+    color: #000;
+    font-size: 18px;
+}
+
+@keyframes wrapperAni {
+    0% {
+        opacity: 0;
+        transform: scale(.95) translateY(40px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1) translateY(0);
+    }
+}
+
+@keyframes headerAni {
+    0% {
+        border-radius: 0;
+        opacity: 0;
+        transform: translateY(-100px);
+    }
+
+    100% {
+        border-radius: 50%;
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes signAni {
+    0% {
+        opacity: 0;
+        transform: scale(.3) rotate(180deg);
+    }
+
+    60% {
+        transform: scale(1.3);
+    }
+
+    80% {
+        transform: scale(.9);
+    }
+
+    100% {
+        opacity: 1;
+        transform: scale(1) rotate(0);
+    }
+}
 textarea {
     font-family: inherit;
 }
@@ -509,13 +739,27 @@ nav {
 
 .search-res {
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
 }
-
-.search-res-prods {
+.search__item {
+    display: flex;
+    align-items: center;
+    gap: 20px;
     border-bottom: 1px solid #777;
-    padding: 20px 15px;
+    padding: 10px;
 }
+.search__img {
+    width: 50px;
+    height: 50px;
+}
+    .search__img img {
+        width: 100%;
+        height:100%;
+        object-fit:contain;
+    }
+    .search-res-prods {
+      
+    }
 
 
 
@@ -591,6 +835,9 @@ nav {
 }
 
 @media (max-width: 992px) {
+    body.lock {
+        overflow: hidden;
+    }
     .header__right {
         margin-right: 20px;
     }
@@ -713,6 +960,10 @@ nav {
         line-height: 130%;
     }
 
+    .btn-green {
+        font-size: 14px;
+    }
+
     .header__wrapper {
         height: 59px;
     }
@@ -770,18 +1021,26 @@ nav {
 
     .nav__list {
         overflow: auto;
-        gap: 50px;
+        gap: 10px;
     }
-
-    .home__banner .swiper-slide {
-        height: 410px;
-    }
+      
+        .home__banner .swiper-slide {
+            height: 410px;
+        }
 
     .floating-label-input input, .floating-label-input textarea {
         font-size: 14px;
     }
+    .tag-results {
+        top: 46px;
+    }
 }
 
+@media (max-width: 479px) {
+    .nav__list li a {
+        font-size: 10px;
+    }
+}
 
 @media (min-width: 1024.99px) {
     ::-webkit-scrollbar {
