--- a/MyShop/wwwroot/assets/css/style.css
+++ b/MyShop/wwwroot/assets/css/style.css
@@ -249,6 +249,7 @@
         transform: scale(1) rotate(0);
     }
 }
+
 textarea {
     font-family: inherit;
 }
@@ -324,15 +325,17 @@ main {
     color: var(--green);
     font-weight: 700;
 }
+
 .loader__wrapper {
     position: fixed;
     inset: 0;
     background: rgba(0, 0, 0, 0.3);
     z-index: 1000;
-    display:flex;
-    justify-content:center;
-    align-items:center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
 .loader {
     width: 40px;
     height: 30px;
@@ -557,79 +560,86 @@ nav {
     position: relative;
     margin-bottom: 10px;
 }
+
     .floating-label-input.tel {
-        display:flex;
-        align-items:center;
+        display: flex;
+        align-items: center;
     }
+
         .floating-label-input.tel .input-code {
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
             left: 10px;
         }
+
         .floating-label-input.tel img {
             width: 30px;
         }
+
         .floating-label-input.tel input {
             padding-left: 85px;
-
         }
+
         .floating-label-input.tel .input-code span {
             color: #1d1b20;
             font-size: 16px;
             font-weight: 400;
         }
+
 .error-message {
-    position:absolute;
+    position: absolute;
     right: 10px;
-    display:none;
+    display: none;
     color: red;
     font-size: 12px;
 }
+
     .error-message.active {
-        display:block;
-    }
-    .floating-label-input .label {
-        background-color: var(--default-color);
-        color: #49454f;
-        top: 0px;
-        left: 16px;
-        pointer-events: none;
-        position: absolute;
-        transform-origin: top left;
-        transition: all 0.2s ease-in-out;
-        transform: translateY(-7px);
-        padding: 0 5px;
-        font-size: 12px;
+        display: block;
     }
 
-    .floating-label-input input,
-    .floating-label-input textarea {
-        border: 2px solid #79747e;
-        border-radius: 4px;
-        color: #1d1b20;
-        font-size: 16px;
-        font-weight: 400;
-        padding: 12px 16px;
-        width: 100%;
-        background-color: transparent;
-        transition: border 0.3s ease;
+.floating-label-input .label {
+    background-color: var(--default-color);
+    color: #49454f;
+    top: 0px;
+    left: 16px;
+    pointer-events: none;
+    position: absolute;
+    transform-origin: top left;
+    transition: all 0.2s ease-in-out;
+    transform: translateY(-7px);
+    padding: 0 5px;
+    font-size: 12px;
+}
+
+.floating-label-input input,
+.floating-label-input textarea {
+    border: 2px solid #79747e;
+    border-radius: 4px;
+    color: #1d1b20;
+    font-size: 16px;
+    font-weight: 400;
+    padding: 12px 16px;
+    width: 100%;
+    background-color: transparent;
+    transition: border 0.3s ease;
+}
+
+    .floating-label-input input:focus,
+    .floating-label-input textarea:focus {
+        border: 2px solid var(--green);
     }
 
-        .floating-label-input input:focus,
-        .floating-label-input textarea:focus {
-            border: 2px solid var(--green);
+        .floating-label-input input:focus ~ .label,
+        .floating-label-input textarea:focus ~ .label {
+            color: var(--green);
         }
 
-            .floating-label-input input:focus ~ .label,
-            .floating-label-input textarea:focus ~ .label {
-                color: var(--green);
-            }
-
-    .floating-label-input textarea {
-        min-height: 102px;
-        resize: none;
-    }
+.floating-label-input textarea {
+    min-height: 102px;
+    resize: none;
+}
 
 .btn-green {
     padding: 10px;
@@ -643,14 +653,16 @@ nav {
     line-height: 1;
 }
 
-.btn-green:hover {
-    color: var(--green);
-    background: var(--white);
-    border-color: var(--green)
-}
+    .btn-green:hover {
+        color: var(--green);
+        background: var(--white);
+        border-color: var(--green)
+    }
+
 .callback .btn-green:disabled, .cart-order__form .btn-green:disabled {
     opacity: .3
 }
+
     .callback .btn-green:disabled:hover, .cart-order__form .btn-green:disabled:hover {
         color: var(--white);
         border: 3px solid transparent;
@@ -757,6 +769,64 @@ nav {
     padding: 50px 0;
 }
 
+
+
+.footer__wrapper {
+    display: flex;
+    gap: 120px;
+    justify-content: center;
+    color: #fff;
+}
+
+    .footer__wrapper .header__logo {
+        font-size: 30px;
+    }
+
+    .footer__wrapper .nav__list {
+        flex-direction: column;
+        align-items: start;
+        gap: 20px;
+    }
+
+        .footer__wrapper .nav__list li a {
+            padding: 0;
+            font-size: 14px;
+        }
+
+.footer__item .item__pages .item__info, .footer__item .item__contact {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+    .footer__item .item__contact .item__info {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+        .footer__item .item__contact .item__info span {
+            color: #ccc;
+        }
+
+    .footer__item .item__pages .item__info a {
+        color: #fff;
+    }
+
+        .footer__item .item__pages .item__info a:hover {
+            text-decoration: underline;
+            background: transparent;
+        }
+
+    .footer__item .item__contact .header__phone a {
+        display: flex;
+    }
+
+    .footer__item .item__contact svg {
+        display: block;
+        width: 30px;
+    }
+
 .tag-results {
     scrollbar-width: thin;
     top: 50px;
@@ -779,8 +849,9 @@ nav {
 
 .search-res {
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
 }
+
 .search__item {
     display: flex;
     align-items: center;
@@ -788,18 +859,20 @@ nav {
     border-bottom: 1px solid #777;
     padding: 10px;
 }
+
 .search__img {
     width: 50px;
     height: 50px;
 }
+
     .search__img img {
         width: 100%;
-        height:100%;
-        object-fit:contain;
+        height: 100%;
+        object-fit: contain;
     }
-    .search-res-prods {
-      
-    }
+
+.search-res-prods {
+}
 
 
 
@@ -878,6 +951,7 @@ nav {
     body.lock {
         overflow: hidden;
     }
+
     .header__right {
         margin-right: 20px;
     }
@@ -1063,14 +1137,15 @@ nav {
         overflow: auto;
         gap: 10px;
     }
-      
-        .home__banner .swiper-slide {
-            height: 410px;
-        }
+
+    .home__banner .swiper-slide {
+        height: 410px;
+    }
 
     .floating-label-input input, .floating-label-input textarea {
         font-size: 14px;
     }
+
     .tag-results {
         top: 46px;
     }
@@ -1088,10 +1163,12 @@ nav {
         height: 8px;
         cursor: pointer;
     }
+
     ::-webkit-scrollbar-thumb {
         background-color: var(--green-secondary);
         border-radius: 0px;
     }
+
     ::-webkit-scrollbar-track {
         background-color: var(--green);
     }
