worked on footer about-us page & contact page

--- a/MyShop/Views/Info/AboutUs.cshtml
+++ b/MyShop/Views/Info/AboutUs.cshtml
@@ -1,7 +1,46 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "AboutUs";
 }
 
-<h1>AboutUs</h1>
+@section head {
+    <link rel="stylesheet" href="~/assets/css/about-us.css"/>
+}
+
+<section class="about-us">
+    <div class="container">
+        <div class="about-us__title title">Մեր մասին</div>
+        <div class="about-us__wrapper">
+            <div class="about-us__welcome">
+                <img src="~/assets/img/mymobile.jpg" alt="myMobile"/>
+           <div class="welcome__content">
+                     <h1>
+                Բարի գալուստ <b>Mymobile՝</b> ձեր հուսալի գործընկերը ժամանակակից տեխնոլոգիաների և բջջային լուծումների աշխարհում:
+            </h1>
+                <p>
+                Մեր հիմնադրման օրվանից մենք ձգտել ենք մեր հաճախորդներին տրամադրել շուկայում առկա լավագույն և նորարարական արտադրանքները: <b>Mymobile-ը</b> մասնագիտացած է բարձրորակ սարքավորումների և հեռախոսների վաճառքում` առաջարկելով միայն ապացուցված և պահանջված մոդելներ առաջատար արտադրողներից:
+            </p>
+            <p>Մեր առաքելությունն է զարգացած տեխնոլոգիաները հասանելի դարձնել բոլորին, ովքեր գնահատում են հուսալիությունը, կատարումը և ոճը: Մենք ուշադիր ընտրում ենք մեր արտադրանքը, որպեսզի համոզվենք, որ մեր առաջարկած յուրաքանչյուր ապրանք համապատասխանում է որակի ամենաբարձր չափանիշներին:</p>
+
+                </div>
+            </div>
+           
+            <div class="why-choose-us">
+                <strong>Ինչու՞ ընտրել մեզ:</strong>
+                <ul>
+                    <li><b>Լայն տեսականի.</b> Այստեղ դուք կգտնեք ամեն ինչ՝ սմարթֆոնների վերջին մոդելներից մինչև նորագույն գաջեթներ և աքսեսուարներ:</li>
+                    <li><b>Որակ և հուսալիություն.</b> Մենք աշխատում ենք միայն վստահելի ապրանքանիշերի և մատակարարների հետ՝ ապահովելու մեր հաճախորդների առավելագույն բավարարվածությունը:</li>
+                    <li><b>Մասնագիտական ​​աջակցություն.</b> մեր փորձառու մասնագետների թիմը միշտ պատրաստ է օգնել ձեզ ընտրության հարցում և պատասխանել ցանկացած հարցի:</li>
+                    <li><b>Հարմարավետություն և սպասարկում.</b> մենք առաջարկում ենք առաքման ճկուն տարբերակներ և վճարման հարմար եղանակներ՝ մեզ հետ գնումները պարզ և հարմարավետ դարձնելու համար:</li>
+                    <li></li>
+                </ul
+            </div>
+            <p>
+                <b>Mymobile</b>-ում մենք հասկանում ենք, թե որքան կարևոր է տեղեկացված լինել վերջին տեխնոլոգիաներից և օգտագործել լավագույն տեխնոլոգիաները, ուստի մենք անընդհատ հետևում ենք վերջին միտումներին և թարմացնում մեր տեսականին, որպեսզի միշտ կարողանաք գտնել այն, ինչ ձեզ հարկավոր է:
+            </p>
+            <p>
+                <b>Շնորհակալություն</b> մեզ ընտրելու համար: Մենք գնահատում ենք յուրաքանչյուր հաճախորդի և ձգտում ենք ձեր գնումների փորձը դարձնել հնարավորինս հաճելի և արդյունավետ: Եթե ​​ունեք հարցեր կամ առաջարկություններ, մի հապաղեք կապվել մեզ հետ, մենք միշտ պատրաստ ենք օգնել:
+            </p>
+        </div>
+    </div>
+</section>
 
