--- a/MyShop/wwwroot/assets/css/style.css
+++ b/MyShop/wwwroot/assets/css/style.css
@@ -786,6 +786,7 @@ nav {
         flex-direction: column;
         align-items: start;
         gap: 20px;
+        overflow:hidden;
     }
 
         .footer__wrapper .nav__list li a {
@@ -824,24 +825,50 @@ nav {
 
     .footer__item .item__contact svg {
         display: block;
-        width: 30px;
+        width: 40px;
+        height: 40px;
     }
 
-.tag-results {
-    scrollbar-width: thin;
-    top: 50px;
-    background: #fff;
-    width: 100%;
-    height: fit-content;
-    max-height: 450px;
-    overflow-y: auto;
-    border-radius: 0;
-    position: absolute;
-    bottom: 0;
-    z-index: 10000;
-    border: 1px solid var(--green);
-    font-weight: 400;
+    .footer__phone a {
+        font-size: 16px;
+        color:#fff;
+        margin-bottom: 15px;
+        display:block;
+    }
+
+.footer__item .item__contact .item__info.footer__social {
+    display: flex;
+    gap: 10px;
+    flex-direction: row !important;
 }
+
+.footer__copyright {
+    text-align: center;
+    color: #d6d6d6;
+    margin-top: 30px;
+    border-top: 1px solid #fff;
+    padding-top: 20px;
+}
+    .footer__copyright a {
+        text-decoration:underline;
+        color: #fff;
+        margin-right: 10px;
+    }
+    .tag-results {
+        scrollbar-width: thin;
+        top: 50px;
+        background: #fff;
+        width: 100%;
+        height: fit-content;
+        max-height: 450px;
+        overflow-y: auto;
+        border-radius: 0;
+        position: absolute;
+        bottom: 0;
+        z-index: 10000;
+        border: 1px solid var(--green);
+        font-weight: 400;
+    }
 
     .tag-results.hidden {
         display: none;
@@ -1149,11 +1176,37 @@ nav {
     .tag-results {
         top: 46px;
     }
+
+    .footer {
+        padding: 30px 0;
+    }
+    .footer__wrapper {
+        gap: 30px;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .footer__wrapper .footer__item.logo {
+        width: 100%;
+        text-align:center;
+    }
+        .footer__wrapper .header__logo {
+            font-size: 24px;
+        }
 }
 
 @media (max-width: 479px) {
     .nav__list li a {
         font-size: 10px;
+    }
+    .footer__wrapper  {
+        flex-direction:column;
+    }
+        .footer__wrapper .footer__item.logo {
+            text-align:left;
+        }
+    .footer__copyright {
+        font-size: 12px;
+        line-height: 150%;
     }
 }
 
